--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "leancloud-storage": "^3.9.0",
     "qiniu": "^7.2.1",
     "qiniu-js": "^2.4.0"
+  },
+  "devDependencies": {
+    "plupload": "^2.3.6"
   }
 }
